--- a/git_tst/index.html
+++ b/git_tst/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>CPS 847 Assignment 1</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>     
+<h1>CPS 847 Assignment 1</h1>
+<p>Group 40</p>     
     
 </body>
 </html>
